exports[`Button should be disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 5,
        "justifyContent": "center",
        "marginHorizontal": 16,
        "paddingBottom": 17,
        "paddingTop": 15,
      },
      Object {
        "backgroundColor": "#f77040",
      },
      undefined,
      undefined,
      Array [
        Object {
          "backgroundColor": "#dfe5e6",
        },
        undefined,
      ],
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
        },
        Object {
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_bold",
            "fontSize": 13,
            "fontWeight": "bold",
            "letterSpacing": 1,
          },
          Object {
            "color": "#ffffff",
          },
          undefined,
          Array [
            Object {
              "color": "#ffffff",
            },
            undefined,
          ],
        ],
      ]
    }>
    margle
  </Text>
</View>
`;

exports[`Button should render "inline" layout 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should render "light" theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should render "small" size 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should render "stretch" layout 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should render "transparent" theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should render its \`title,\` and map \`onPress\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`Button should take any kind of children 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }>
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;
